# platxa-memory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.claude/: CHANGELOG.md
.claude-plugin/: marketplace-entry.json  plugin.json
.github/workflows/: ci.yml
agents/: memory-auditor.md  memory-curator.md  memory-doctor.md  memory-migrator.md  memory-researcher.md  memory-synthesizer.md
docs/: memory-architecture.md
hooks/: post_compact_hook.py  pre_compact_hook.py  pretool_stop_guard.py  session_start_hook.py  stop_hook.py
skills/memory-doctor/: SKILL.md
skills/memory-init/: SKILL.md
skills/memory-search/: SKILL.md
skills/memory-status/: SKILL.md
src/platxa_memory/: __init__.py  atomic.py  migration.py  stack.py
templates/: AGENTS.md  CLAUDE.md  README.md
templates/go/.claude/rules/: go-style.md  go-testing.md
templates/java/.claude/rules/: java-style.md  java-testing.md
templates/monorepo/.claude/rules/: monorepo-cross-package.md  monorepo-workspaces.md
templates/python/.claude/rules/: python-style.md  python-testing.md
templates/ruby/.claude/rules/: ruby-style.md  ruby-testing.md
templates/rust/.claude/rules/: rust-style.md  rust-testing.md
templates/typescript/.claude/rules/: typescript-style.md  typescript-testing.md
tests/: conftest.py  test_atomic.py  test_ci_workflow.py  test_claude_md_template.py  test_cli.py  test_memory_architecture_doc.py  test_migration.py  test_plugin_manifest.py  test_pretool_stop_guard.py  test_readme.py  test_stack.py  test_stop_hook.py  test_templates.py
tests/e2e/: __init__.py  conftest.py  test_install_init_status.py
