[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platxa-memory"
version = "0.1.0"
description = "Production-grade Claude Code memory plugin. Cross-session memory, context injection, and compaction survival using only native Claude Code primitives."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DJ Patel" },
]
keywords = [
    "claude",
    "claude-code",
    "memory",
    "context",
    "plugin",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyright>=1.1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/platxa/platxa-memory"
Repository = "https://github.com/platxa/platxa-memory"
Issues = "https://github.com/platxa/platxa-memory/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/platxa_memory"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["tests", "**/__pycache__", ".venv", ".git"]
extraPaths = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]
extend-exclude = [".claude", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B006", "C901"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"src/platxa_memory/hooks/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
